manifests/mysql-service.yaml
# mysql service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: training
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
