manifests/service-db.yaml
# service db
apiVersion: v1  
kind: Service
metadata:
  name: mysql-service
  namespace: training
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
