manifests/networkpolicy.yaml
# network policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dvwa-to-db
  namespace: training
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dvwa
    ports:
    - protocol: TCP
      port: 3306
